--- a/form003.html
+++ b/form003.html
@@ -7,23 +7,21 @@
 </head>
 <body>
     <h1>Teste de Formulário</h1>
+    <fieldset></fieldset>
     <form action="cadastro.php" method="get" autocomplete="on">
         <p>
-            <label for="inome">Nome</label>
-            <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome completo" autocomplete="name">
+            <label for="iemail">Email</label>
+            <input type="email" name="email" id="iemail">
         </p>
         <p>
-            <label for="imedia">Média</label>
-            <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="0.1" value="5" required >
-        </p>
-        <p>
-            <label for="imes">Periodo letivo</label>
-            <input type="month" name="mes" id="imes" >
-        </p>
+            <label for="itel">Telefone</label>
+            <input type="tel" name="tel" id="itel" autocomplete="tel" required>
+        </p>    
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
     </form>
+    </fieldset>
 </body>
 </html>
